# dotkonnekt

./: .env.example  .gitignore  Makefile  README.MD  alembic.ini  api.http  compose.yml  e2e_test.py  main.py  model_config.json  pyproject.toml  test_graph.py
.http/: documents.http  health.http  models.http  query.http
frontend/: app.py  requirements.txt
src/: server.py
src/api/: router.py
src/api/v1/: models.py  query.py  upload.py
src/configs/: __init__.py  app.py  database.py  settings.py  storage.py
src/core/: clause_graph.py  document.py  pipeline.py  storer.py
src/core/agent/: graph.py  mcp_client.py  qa.py
src/core/chunkers/: __init__.py  base.py  semantic.py  text.py
src/core/embedders/: __init__.py  embedder.py
src/core/enrichment/: __init__.py  deterministic.py  semantic.py
src/core/models/: __init__.py  providers.py  registry.py  schemas.py
src/core/parsers/: __init__.py  base.py  pdf.py
src/core/retrieval/: __init__.py  context.py  intent.py  pipeline.py
src/core/tracing/: collector.py
src/database/: __init__.py  db.py  models.py  session.py
src/database/migrations/: env.py
src/database/migrations/versions/: 0001_create_jobs_table.py  3b52f0650d91_.py
src/document_analyzers/: __init__.py  base.py  employment.py  finance.py  generic.py  insurance.py  legal.py  technical.py
src/mcp_server/: server.py
src/models/: __init__.py  job.py  langgraph_message.py  storage.py
src/queue/: __init__.py  queue.py  rabbitmq.py
src/storage/: __init__.py  base.py  factory.py  minio.py  s3.py
src/worker/: __init__.py  langgraph_worker.py  run.py  storage_worker.py  worker.py
tests/: stress_test.py
tests/integration/: conftest.py  test_chunk_navigation.py  test_chunker.py  test_db.py  test_embedder.py  test_models_api.py  test_parser_pdf.py  test_pipeline.py  test_queue.py  test_storage.py  test_upload_api.py  test_worker_storage_flow.py
tests/unit/: test_chunkers.py  test_clause_graph.py  test_db.py  test_document.py  test_embedder.py  test_enrichment.py  test_graph_batching.py  test_parsers.py  test_pipeline.py  test_providers.py  test_queue.py  test_registry.py  test_storage_minio.py  test_storage_s3.py  test_worker.py
