[project]
name = "dotkonnekt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "pydantic-settings>=2.14.2",
    "minio>=7.2.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "asyncpg>=0.29.0",
    "aio-pika>=9.4.0",
]
