[project]
name = "dotkonnekt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "pydantic-settings>=2.14.2",
    "minio>=7.2.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "asyncpg>=0.29.0",
    "aio-pika>=9.4.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require external services like Postgres, RabbitMQ, MinIO)",
]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
