[project]
name = "dotkonnekt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "pydantic-settings>=2.14.2",
    "minio>=7.2.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "asyncpg>=0.29.0",
    "aio-pika>=9.4.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "langchain>=1.3.11",
    "langgraph>=1.2.7",
    "langchain-openai>=1.3.3",
    "langchain-qdrant>=1.1.0",
    "langchain-community>=0.4.2",
    "langsmith>=0.9.7",
    "pymupdf>=1.28.0",
    "pydantic>=2.13.4",
    "uvicorn>=0.50.2",
    "qdrant-client>=1.18.0",
    "openai>=2.44.0",
    "tiktoken>=0.13.0",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-exporter-otlp>=1.43.0",
    "python-multipart>=0.0.32",
    "aiofiles>=25.1.0",
    "pillow>=12.3.0",
    "litellm>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require external services like Postgres, RabbitMQ, MinIO)",
]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]
